fix(friends_content.css): change scroll-container friend-search div overflow-y to auto

--- a/frontend/src/css/menu/friends_content.css
+++ b/frontend/src/css/menu/friends_content.css
@@ -140,7 +140,7 @@
   gap: 0.3125rem;
   padding: 1.25rem 1.25rem 1.25rem 1.25rem;
   height: 100%;
-  overflow-y: scroll; 
+  overflow-y: auto; 
 }
 
 .list-content-placeholder-text {
